# PASTML

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_FLET  PASTML  README  README.md  asrml.h  bfgs.c  cmake_install.cmake  eigen.c  fletcher.c  fletcher.h  fletcherJC.c  fletcherJC.h  golden.c  golden.h  joint_likelihood.c  joint_likelihood.h  joint_poly.c  lik.c  lik.h  lik_bfgs.c  lik_poly.c  likelihood.c  likelihood.h  logger.c  logger.h  main.c  make_tree.c  make_tree.h  make_tree_alloc.c  marginal_approxi.c  marginal_approxi.h  marginal_approximation.c  marginal_approximation.h  marginal_lik.c  marginal_lik.h  marginal_likelihood.c  (+35 more)
Test_metric/: 8.taxa.nopoly.tre  8taxa.nuc.txt  8taxa.nuc.txt.F81.marginal_approx.pastml.out.csv  8taxa.nuc.txt.F81.max_posteriori.pastml.out.csv  8taxa.nuc.txt.F81.maxlikelihood.pastml.parameters.csv  Ancestral.txt  Annotation.txt  dist_pairs.csv  list_pairs.csv  true_scenario.txt
Test_metric/PastML_Metric/: Human1337_Swine22_HA_H1N1_NorthAme_aa.fas  Human1337_Swine22_HA_H1N1_NorthAme_nuc.fas  HumanH1N1_1337_H3N2_147_HA_NorthAme_nuc.fas
Test_metric/PastML_Metric/H1N1_swine_2007_NA/: CdsFastaResults.fasta  ProteinFastaResults.fasta
Test_metric/PastML_Metric/H3N2_Human_2007_NA/: CdsFastaResults.fasta  ProteinFastaResults.fasta
Test_metric/PastML_Metric/MAFFT/: HumanH1N1_1337_H3N2_147_HA_NorthAme_nuc_mafft_pos.fas
Test_metric/Simulation_1000tips/: 1000tips.b.1.tre  1001.tips.outgroup.b.1.tre  1001tips.100bp.hky.phy  1002.tips.outgroup.b.1.tre  Constraint.txt  constraint.pl  outtips.tre
Test_metric/Simulation_1000tips/RAxML_parsimony/: RAxML_binaryModelParameters.pars.opt.1.tre  RAxML_binaryModelParameters.pars.opt.10.tre  RAxML_binaryModelParameters.pars.opt.100.tre  RAxML_binaryModelParameters.pars.opt.11.tre  RAxML_binaryModelParameters.pars.opt.12.tre  RAxML_binaryModelParameters.pars.opt.13.tre  (+394 more)
data_simulations/snakemake/: Snakefile  config.yaml
examples/Albania/: README.md  main.py
examples/Albania/data/: data.txt  (+2 more)
examples/HIV1C/: README.md  Readme.md  main.py
examples/simulation/: README.md
pastdoc/: Dockerfile  cytopast_main.py
(+837 files in other folders)
